--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@vitejs/plugin-vue": "^5.2.0",
     "vite": "^5.4.11",
     "vite-plugin-pwa": "^0.21.0"
+  },
+  "dependencies": {
+    "vue": "^3.5.13"
   }
 }
