--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vite-plugin-pwa": "^0.21.0"
   },
   "dependencies": {
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-router": "^4.4.5"
   }
 }
