--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.0",
     "vite": "^5.4.11",
-    "vite-plugin-pwa": "^0.21.0"
+    "vite-plugin-pwa": "^0.21.0",
+    "vite-tsconfig-paths": "^5.1.2"
   },
   "dependencies": {
     "vue": "^3.5.13",
