--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "include": [
-        "./src/**/*.ts"
+        "./src/**/*",
     ],
     "exclude": [
         "node_modules/**/*"
@@ -12,6 +12,11 @@
             "ESNext",
             "dom"
         ],
+        "paths": {
+            "@/*": [
+                "./src/*",
+            ]
+        },
         "removeComments": true,
         "target": "ES6",
         "esModuleInterop": true,
