--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "description": "",
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15",
     "vite": "^5.4.11",
     "vite-plugin-pwa": "^0.21.0",
     "vite-tsconfig-paths": "^5.1.2"
