--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "vue": "^3.5.13",
     "vue-router": "^4.4.5",
-    "vue3-markdown-it": "^1.0.10"
+    "vue3-markdown-it": "^1.0.10",
+    "zod": "^3.23.8"
   }
 }
